2012-04-27  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/cod.c (cod_write_symbols): Fix bug #3521796 reverting a change
  from revision 572.
  
2012-04-21  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/lst.c:
    fixed bug #3519850 - gplink fails to find source - patch attached
  * include/stdhdr.h: updated copyright year

2012-04-20  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpopcode.c: fixed bug #3519667 - gpdasm fails to decove
    movlb on pic16f enhanced midrange
  * gputils/testsuite/test: fixed for sh

2012-03-14  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gpasm.c, libgputils/gpwriteobj.c, libgputils/gpwriteobj.h:
    implemented enhancement request #3504111 - Generate coff file in
    absolute mode: added function gp_is_absolute_object() which detects
    if the object is absolute and set F_ABSOLUTE coff file headr flag

2012-03-12  Borut Razem  <borutr@users.sourceforge.net>
  * 16c58a_g.lkr, 16cr58b_g.lkr, 16f1507_g.lkr:
    MPLAB X IDE v1.10, mpasmx 5.42

2012-03-04  Borut Razem  <borutr@users.sourceforge.net>
  * gputils/gpdasm.c:
    applied patch #3496780: Typo in gpdasm help message
    thanks to Alain Portal
  * man/gpdasm.1.in, man/gpvo.1.in, man/gplib.1.in, man/gpvc.1.in,
    man/fr/gpdasm.1.in, man/fr/gpvo.1.in, man/fr/gplib.1.in,
    man/fr/gpvc.1.in, man/fr/gplink.1.in, man/fr/gpasm.1.in,
    man/fr/gputils.1.in, man/fr/gpstrip.1.in, man/gplink.1.in,
    man/gpasm.1.in, man/gputils.1.in, man/gpstrip.1.in:
    applied patch #3496782: Update man pages
    thanks to Alain Portal

2012-03-02  Borut Razem  <borutr@users.sourceforge.net>
  * get_cl_revision.sh:
    use tail in non POSIX mode for Solaris copatibility

2012-02-29  Borut Razem  <borutr@users.sourceforge.net>
  * get_cl_revision.sh:
    added utility to extract source control revision number from ChangeLog
  * Makefile.am, Makefile.in,
    gputils/Makefile.am, gputils/Makefile.in,
    gplink/Makefile.am, gplink/Makefile.in,